Fixed scrollbar

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,10 +4,6 @@ body::-webkit-scrollbar {
 	width: 1em;
 }
 
-body::-webkit-scrollbar-track {
-	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-}
-
 body::-webkit-scrollbar-thumb {
 	background-color: rgb(59, 59, 59);
 	border-radius: 25px;
